# Python-core

./: README.md  lectures_chanal_links.txt  test.py  test.txt
hw10/: lecture.py  lecture.txt  test.py
hw10/bingo-game/: card.py  gamer.py  main.py
hw10/cli-bot/: classes.py  error_handlers.py  handlers.py
hw11/: lecture.py  test.py
hw11/cli-bot/: classes.py  commands_parser.py  error_handlers.py  handlers.py  main.py
hw12/: lecture.py
hw12/cli-bot/: classes.py  commands_parser.py  error_handlers.py  handlers.py  main.py
hw2/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py
hw3/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  my_module.py  test_module_3.py
hw4/: cards_diller.py  pathlib_test.py  plain_list.md  shopping_list.md  techer_cards_dealer.py  test.py  test_1.py
hw5/: regex.py  test.py  test_2.py  translit_script.py
hw6/: lecture_1.py  test.py  test.txt
hw6/HW_project/: main.py  tools.py
hw7/: test.py
hw7/HW_project/clean_folder/: setup.py
hw7/HW_project/clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hw7/HW_project/clean_folder_by_MK/: LICENSE  README.md  pyproject.toml  setup.py
hw7/HW_project/clean_folder_by_MK/src/clean_folder_by_MK/: ___init___.py
hw8/: lecture.py  random.md  requirements.txt  test.py
hw8/HW_project/: main.py
hw9/: Module 9 Lecture 1 В домашній.txt  lecture.py  test.py
hw9/CLI-bot/: setup.py  test.py
hw9/CLI-bot/src/: __init__.py  decorators.py  handlers.py  main.py
m04-08_recap/: lesson_1.py  lesson_2.py
(+3 files in other folders)
