[build-system]
requires = ["setuptools>65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clean_folder_by_MK"
version = "1.0.0"
authors = [
    { name = "Maksym Klym", email = "maxymklym1996@gmail.com"},
]
description = "Script for sorting files in junked folders"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[pyproject-scripts]
clean-folder = "clean_folder_by_MK.main:main"

[project.urls]
"Homepage" = "https://github.com/takeRednotBlue/Python-core/tree/main-chgd/hw7/HW_project/clean_folder_by_MK"


